cmake_minimum_required(VERSION 3.5)

project(rv_ffi LANGUAGES CXX)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
FIND_PACKAGE(SDL2 REQUIRED)
FIND_PACKAGE(SDL2_image REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED COMPONENTS GLES2)
FIND_PACKAGE(RustyVangers REQUIRED)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")

add_executable(rv_ffi
	main.cpp
	vange_rs.h
	)

include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(rv_ffi
	${RUSTY_VANGERS_LIBRARY}
	${SDL2_LIBRARIES}
	${SDL2_IMAGE_LIBRARIES}
	${OPENGL_gles2_LIBRARY}
	dl
	pthread
)
